--- a/crawling-suite/scrapy.cfg
+++ b/crawling-suite/scrapy.cfg
@@ -7,5 +7,5 @@
 default = ftm_crawling_suite.settings
 
 [deploy]
-#url = http://localhost:6800/
+url = http://localhost:6800/
 project = ftm_crawling_suite
