--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,5 @@
 version: "1.0.0"
 services:
-  redis:
-    container_name: "redis-server"
-    image: "redis:latest"
-    ports:
-      - "6379:6379"
-  mongodb:
-    image: "mongo:latest"
-    ports:
-      - "27019:27019"
-    expose:
-      - "27019:27019"
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=rootPass
-    volumes:
-      - ./mongodb/data:/data/db
   scrapydweb:
     image: "webclient"
     ports:
@@ -33,7 +17,7 @@ services:
     volumes:
       - ./scrapyd/data:/var/lib/scrapyd
       - ./projects:/usr/local/projects
-      - /usr/local/lib/python3.9/dist-packages
+      - /usr/local/lib/pythovenvn3.9/dist-packages
     restart: unless-stopped
 
 
