--- a/manifests/argocd/ingress.yaml
+++ b/manifests/argocd/ingress.yaml
@@ -1,18 +1,18 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: scrapy-ingress
-  namespace: scrapy
+  name: argo-ingress
+  namespace: argocd
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /argo
 spec:
   rules:
   - http:
       paths:
-      - path: /
+      - path: /argo
         pathType: Prefix
         backend:
           service:
-            name: scrapyd-web-svc
+            name: argo-cd-argocd-server
             port:
               number: 80
