configure daemon specs to autorun logparser & scrapyd

--- a/scrapyd/requirements.txt
+++ b/scrapyd/requirements.txt
@@ -1,5 +1,9 @@
 logparser
 pymongo==4.3.3
-pyopenssl==22.0.0
-cryptography==38.0.4
 scrapy-redis
+botocore
+scrapy-s3pipeline[s3]
+python-scrapyd-api
+cloudscraper
+beautifulsoup4
+Scrapy==2.11.1
