--- a/manifests/analytixscrapy/templates/ingress.yaml
+++ b/manifests/analytixscrapy/templates/ingress.yaml
@@ -6,6 +6,9 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  {{- if .Values.ingressClassName}}
+  ingressClassName: {{ .Values.ingressClassName }}
+  {{- end}}
   rules:
   - http:
       paths:
