--- a/manifests/analytixscrapy/templates/minio-pvc.yaml
+++ b/manifests/analytixscrapy/templates/minio-pvc.yaml
@@ -15,6 +15,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: minio-data
 spec:
+  storageClassName: {{ .Values.minio.storageClassName | default "default" }}
   accessModes:
     - ReadWriteOnce
   resources:
